Remove unsupported cursor from project details
