# openapi.yaml
@@ -16,11 +16,6 @@ paths:
             type: integer
             default: 20
           required: false
-        - name: cursor
-          in: query
-          schema:
-            type: string
-          required: false
       responses:
         '200':
           description: Project list
@@ -43,11 +38,6 @@ paths:
           schema:
             type: integer
             default: 20
-          required: false
-        - name: cursor
-          in: query
-          schema:
-            type: string
           required: false
       responses:
         '200':
